Bug 1312030 - Remove MediaParent singleton to work with multi content processes. r=jesup

MozReview-Commit-ID: 8JONCRge6SU